# LabSmith

./: .dockerignore  .env.example  .gitignore  HANDOFF.md  PROGRESS.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0975421fbff3_initial_schema.py  a4d7f2e89c01_session_type_uppercase_experiment.py  b6d58704dee5_add_session_type_to_design_sessions.py  b7f1d3e905a2_add_device_jobs_result.py  cc8b4a6f0d9e_add_lab_documents.py  d3a91f7c4e10_add_lab_devices_and_device_jobs.py  e74c2d1a91b8_cascade_device_jobs_artifact_fk.py  f9e2c8b41a73_experiment_runner_and_more_device_types.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/auth/: __init__.py  clerk.py
backend/app/models/: __init__.py  artifact.py  design_session.py  lab_device.py  lab_document.py  lab_membership.py  laboratory.py  message.py  project.py  user.py
backend/app/routers/: artifacts.py  auth.py  (+8 more)
backend/tests/: conftest.py  stl_helpers.py  test_agents.py  test_api.py  test_app.py  test_artifact_endpoints.py  test_cad_generation.py  test_chat_api.py  test_crud_api.py  test_devices.py  test_document_endpoints.py  test_experiments.py  test_llm_provider.py  test_onboarding_retrieval.py  test_parser.py  test_spec_extraction.py  test_storage.py  test_templates.py  test_validation.py
docs/: DEPLOYMENT.md  M3_CONTRACT.md  M4_CONTRACT.md  M5_CONTRACT.md  M6_CONTRACT.md  M9_CONTRACT.md
docs/sample_lab_documents/: README.md  access-and-accounts-checklist.md  data-storage-conventions.md  getting-started-week-one.md  lab-roster-and-ownership.md  microscope-sop.md  waste-handling-policy.md
frontend/: .env.local.example  Dockerfile  index.html  package.json
frontend/src/: App.tsx  styles.css
(+91 files in other folders)
